added some content, me.jpg, doctype & head

--- a/index.html
+++ b/index.html
@@ -16,9 +16,22 @@ THEN I am taken to that deployed application
 WHEN I resize the page or view the site on various screens and devices
 THEN I am presented with a responsive layout that adapts to my viewport-->
 
+<!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Diana Taylor's Portfolio</title>
+</head>
+
+<body>
 <!--Devloper's Name-->
+Diana Taylor
+Alias': 2332fun, arachnescreativedesigns
 
 <!--Recent Photo or Avatar-->
+<img src="./assets/images/me.jpg" alt="A recent picture of Diana Taylor" />
 
 <!--Navigation Link to Section:ABOUT THEM-->
     <!--When CLICKED: Scrolls user down to Section:ABOUT THEM-->
@@ -34,10 +47,11 @@ THEN I am presented with a responsive layout that adapts to my viewport-->
     <!--Titled Images of Developer's Applications-->
     <!--When presented 1st application image: Become larger than other application images-->
     <!--When images are CLICKED: taken to deployed application (in new tab)-->
-    https://2332fun.github.io/run-buddy/
-    https://2332fun.github.io/Horiseon-Project/
-    https://arachnescreativedesigns.neocities.org/Survival08c.html
+    https://2332fun.github.io/run-buddy/ (Completed: Boot Camp Project)
+    https://2332fun.github.io/Horiseon-Project/ (Completed: Boot Camp Project)
+    https://arachnescreativedesigns.neocities.org/Survival08c.html (Work In Progress: Personal Project)
 
 <!--Section: HOW TO CONTACT THEM-->
-
+    Email: mirachan2332@gmail.com
+    Cell: (810)-618-0109
 <!--Resized/MediaQueries: Responsive layout adapts to viewport-->
