--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div class="content">
             <div id="About-Me">
             <h2>About Me</h2>
+            <div class="vertical"></div>
             <!--Recent Photo or Avatar-->
             <img class="myimg" src="./assets/images/me.jpg" alt="A recent picture of Diana Taylor"/>
-            <div class="vertical"></div>
             <p>
                 Placeholder for About Me
             </p>
@@ -61,52 +61,58 @@
 
 
    <section>
-
             <!--Section: THEIR WORK-->
             <!--Titled Images of Developer's Applications-->
             <!--When presented 1st application image: Become larger than other application images-->
             <!--When images are CLICKED: taken to deployed application (in new tab)-->
             <div id="My-Work">
             <h2>My Work</h2>
+            <div class="vertical"></div>
+                <div class="runbuddy">
                 <a href="https://2332fun.github.io/run-buddy/" target="_blank" rel="noopener noreferrer">
                 <img id="firstimg" alt="Run Buddy: Completed CWRU Project" src="./assets/images/runbuddyimg.png"
-                width="300" height="auto">
+                width="75%" height="auto">
                 </a>
                 <p>Run Buddy: Completed CWRU Project</p>
+            </div>
+            <div class="horiseon">
                 <a href="https://2332fun.github.io/Horiseon-Project/" target="_blank" rel="noopener noreferrer">
                 <img alt="Horiseon: Completed CWRU Project" src="./assets/images/Horiseonprojectimg.png"
                 width="300" height="auto">
                 </a>
-                <p>Horiseon-Project: Completed CWRU Project</p> 
+                <p>Horiseon-Project: Completed CWRU Project</p>
+            </div>
+            <div class="fanpage">
                 <a href="https://2332fun.github.io/fanpage/" target="_blank" rel="noopener noreferrer">
                 <img alt="Otep Fanpage: Completed CWRU Practice" src="./assets/images/fanpageimg.png"
                 width="300" height="auto">
                 </a>
                 <p>Fanpage: Completed CWRU Practice</p>
+            </div>
+            <div class="survgame">
                 <a href="https://arachnescreativedesigns.neocities.org/" target="_blank" rel="noopener noreferrer">
                 <img alt="Survival Game: WIP Personal Project using Twine" src="./assets/images/arachneimg.png"
                 width="300" height="auto">
                 </a>
                 <p>Survival Game: WIP Personal Project</p>
             </div>
+            </div>
+    </section>
+    <section>
+        <div id="Contact-Me">
+        <h2>
+          How to Contact Me
+        </h2>
+        <div class="vertical"></div>
+        <p>
+            <!--Section: HOW TO CONTACT THEM-->
+            Email: <a href="mailto:mirachan2332@gmail.com">mirachan2332@gmail.com</a><br>
+            Secondary Email: <a href="mailto:arachnes.creative.designs@gmail.com">arachnes.creative.designs@gmail.com</a><br>
+            Cell: <a href="tel:8106180109">(810)-618-0109</a>
+        </p>
         </div>
     </section>
 </body>
-
-<footer>
-    <div id="Contact-Me">
-    <h2>
-      How to Contact Me
-    </h2>
-    <p>
-        <!--Section: HOW TO CONTACT THEM-->
-        Email: <a href="mailto:mirachan2332@gmail.com">mirachan2332@gmail.com</a><br>
-        Secondary Email: <a href="mailto:arachnes.creative.designs@gmail.com">arachnes.creative.designs@gmail.com</a><br>
-        Cell: <a href="tel:8106180109">(810)-618-0109</a>
-    </p>
-    </div>
-  </footer>
-
 </html>
 
 
