changed My Work section using flex

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
             <!---Developer's Name-->
             <h1>Diana Taylor</h1>
             <!---Navigation Bar-->
-            <div id="nav">
+            <nav>
                 <ul>
                     <li>
-                    <!--Navigation Link to Section:ABOUT THEM-->
-                    <!--When CLICKED: Scrolls user down to Section:ABOUT THEM-->
-                    <a href="#About-Me">About Me</a>
+                        <!--Navigation Link to Section:ABOUT THEM-->
+                        <!--When CLICKED: Scrolls user down to Section:ABOUT THEM-->
+                        <a href="#About-Me">About Me</a>
                     </li>
                     <li>
-                    <!--Navigation Link to Section:THEIR WORK-->
-                    <!--When CLICKED: Scrolls user down to Section:THEIR WORK-->
-                    <a href="#My-Work">My Work</a>
+                        <!--Navigation Link to Section:THEIR WORK-->
+                        <!--When CLICKED: Scrolls user down to Section:THEIR WORK-->
+                        <a href="#My-Work">My Work</a>
                     </li>
                     <li>
-                    <!--Navigation Link to Section:HOW TO CONTACT THEM-->
-                    <!--When CLICKED: Scrolls user down to Section:HOW TO CONTACT THEM-->
-                    <a href="#Contact-Me">How To Contact Me</a>
+                        <!--Navigation Link to Section:HOW TO CONTACT THEM-->
+                        <!--When CLICKED: Scrolls user down to Section:HOW TO CONTACT THEM-->
+                        <a href="#Contact-Me">How To Contact Me</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </section>
 
@@ -47,72 +47,55 @@
     </section>
 
     <section>
-        <div class="content">
-            <div id="About-Me">
-            <h2>About Me</h2>
-            <div class="vertical"></div>
-            <!--Recent Photo or Avatar-->
-            <img class="myimg" src="./assets/images/me.jpg" alt="A recent picture of Diana Taylor"/>
+        <div id="About-Me">
+            <div>
+                <h2>About Me</h2>
+                <!--Recent Photo or Avatar-->
+                <img class="myimg" src="./assets/images/me.jpg" alt="A recent picture of Diana Taylor" />
+            </div>
             <p>
                 Placeholder for About Me
             </p>
-            </div>
+        </div>
     </section>
 
-
-   <section>
-            <!--Section: THEIR WORK-->
-            <!--Titled Images of Developer's Applications-->
-            <!--When presented 1st application image: Become larger than other application images-->
-            <!--When images are CLICKED: taken to deployed application (in new tab)-->
-            <div id="My-Work">
+    <section>
+        <!--Section: THEIR WORK-->
+        <!--Titled Images of Developer's Applications-->
+        <!--When presented 1st application image: Become larger than other application images-->
+        <!--When images are CLICKED: taken to deployed application (in new tab)-->
+        <div class="box">
             <h2>My Work</h2>
-            <div class="vertical"></div>
-                <div class="runbuddy">
-                <a href="https://2332fun.github.io/run-buddy/" target="_blank" rel="noopener noreferrer">
-                <img id="firstimg" alt="Run Buddy: Completed CWRU Project" src="./assets/images/runbuddyimg.png"
-                width="75%" height="auto">
-                </a>
-                <p>Run Buddy: Completed CWRU Project</p>
+            <div class="items">
+                <div class="project-1">
+                    <h3><a href="https://2332fun.github.io/run-buddy/">Run Buddy</a></h3>
+                </div>
+                <div class="project-2">
+                    <h3><a href="https://2332fun.github.io/Horiseon-Project/">Horiseon Project</a></h3>
+                </div>
+                <div class="project-3">
+                    <h3><a href="https://2332fun.github.io/fanpage/">Fanpage</a></h3>
+                </div>
+                <div class="project-4">
+                    <h3><a href="https://arachnescreativedesigns.neocities.org/">Personal Project</a></h3>
+                </div>  
             </div>
-            <div class="horiseon">
-                <a href="https://2332fun.github.io/Horiseon-Project/" target="_blank" rel="noopener noreferrer">
-                <img alt="Horiseon: Completed CWRU Project" src="./assets/images/Horiseonprojectimg.png"
-                width="300" height="auto">
-                </a>
-                <p>Horiseon-Project: Completed CWRU Project</p>
-            </div>
-            <div class="fanpage">
-                <a href="https://2332fun.github.io/fanpage/" target="_blank" rel="noopener noreferrer">
-                <img alt="Otep Fanpage: Completed CWRU Practice" src="./assets/images/fanpageimg.png"
-                width="300" height="auto">
-                </a>
-                <p>Fanpage: Completed CWRU Practice</p>
-            </div>
-            <div class="survgame">
-                <a href="https://arachnescreativedesigns.neocities.org/" target="_blank" rel="noopener noreferrer">
-                <img alt="Survival Game: WIP Personal Project using Twine" src="./assets/images/arachneimg.png"
-                width="300" height="auto">
-                </a>
-                <p>Survival Game: WIP Personal Project</p>
-            </div>
-            </div>
+        </div>
     </section>
     <section>
         <div id="Contact-Me">
-        <h2>
-          How to Contact Me
-        </h2>
-        <div class="vertical"></div>
-        <p>
-            <!--Section: HOW TO CONTACT THEM-->
-            Email: <a href="mailto:mirachan2332@gmail.com">mirachan2332@gmail.com</a><br>
-            Secondary Email: <a href="mailto:arachnes.creative.designs@gmail.com">arachnes.creative.designs@gmail.com</a><br>
-            Cell: <a href="tel:8106180109">(810)-618-0109</a>
-        </p>
+            <h2>
+                How to Contact Me
+            </h2>
+            <p>
+                <!--Section: HOW TO CONTACT THEM-->
+                Email: <a href="mailto:mirachan2332@gmail.com">mirachan2332@gmail.com</a><br>
+                Secondary Email: <a
+                    href="mailto:arachnes.creative.designs@gmail.com">arachnes.creative.designs@gmail.com</a><br>
+                Cell: <a href="tel:8106180109">(810)-618-0109</a>
+            </p>
         </div>
     </section>
 </body>
+
 </html>
-
-
