fixed contact section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!--Titled Images of Developer's Applications-->
         <!--When presented 1st application image: Become larger than other application images-->
         <!--When images are CLICKED: taken to deployed application (in new tab)-->
-        <div class="box">
+        <div class="box" id="My-Work">
             <h2>My Work</h2>
             <div class="items">
                 <div class="project-1">
@@ -84,15 +84,13 @@
     </section>
     <section>
         <div id="Contact-Me">
-            <h2>
-                How to Contact Me
-            </h2>
+            <h2>How to Contact Me</h2>
             <p>
                 <!--Section: HOW TO CONTACT THEM-->
-                Email: <a href="mailto:mirachan2332@gmail.com">mirachan2332@gmail.com</a><br>
-                Secondary Email: <a
-                    href="mailto:arachnes.creative.designs@gmail.com">arachnes.creative.designs@gmail.com</a><br>
-                Cell: <a href="tel:8106180109">(810)-618-0109</a>
+                <h3>Email: <a href="mailto:mirachan2332@gmail.com">mirachan2332@gmail.com</a></h3><br>
+                <h3>Secondary Email: <a
+                    href="mailto:arachnes.creative.designs@gmail.com">arachnes.creative.designs@gmail.com</a></h3><br>
+                <h3>Cell: <a href="tel:8106180109">(810)-618-0109</a></h3>
             </p>
         </div>
     </section>
