changed h3 on My Work, added license and readme.md

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img class="myimg" src="./assets/images/me.jpg" alt="A recent picture of Diana Taylor" />
             </div>
             <p>
-                Placeholder for About Me
+                I am a beginner coding student at Case Western Reserve University in Cleveland, Ohio, though I am studying remotely from Missouri. My goals with coding are to be able to structure elements together to bring ideas to life. Much of my hobby time is spent designing and playing both tabletop and video games.
             </p>
         </div>
     </section>
