added more comments to CSS

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <section>
         <div id="About-Me">
             <div>
+                <!--Section: ABOUT ME-->
                 <h2>About Me</h2>
                 <!--Recent Photo or Avatar-->
                 <img class="myimg" src="./assets/images/me.jpg" alt="A recent picture of Diana Taylor" />
@@ -61,7 +62,7 @@
     </section>
 
     <section>
-        <!--Section: THEIR WORK-->
+        <!--Section: MY WORK-->
         <!--Titled Images of Developer's Applications-->
         <!--When presented 1st application image: Become larger than other application images-->
         <!--When images are CLICKED: taken to deployed application (in new tab)-->
@@ -87,7 +88,7 @@
         <div id="Contact-Me">
             <h2>How to Contact Me</h2>
             <p>
-                <!--Section: HOW TO CONTACT THEM-->
+                <!--Section: HOW TO CONTACT ME-->
                 <h3>Email: <a href="mailto:mirachan2332@gmail.com">mirachan2332@gmail.com</a></h3><br>
                 <h3>Secondary Email: <a
                     href="mailto:arachnes.creative.designs@gmail.com">arachnes.creative.designs@gmail.com</a></h3><br>
