--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                 <div class="project-4">
                     <h3><a href="https://arachnescreativedesigns.neocities.org/">Personal Project</a></h3>
                 </div>  
+                <div class="project-5">
+                    <h3><a href="https://github.com/mtornabene05/music-dashboard">Music-Dashboard</a></h3>
+                </div>
             </div>
         </div>
     </section>
